# SpectraFrame

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE  README.md  SpectraFrame.sln
.cache/clangd/index/: sfCommon.cpp.D7777DB08E72886B.idx  sfCommon.h.6FF7DF9019863F45.idx  sfIntersection.cpp.C482B231FED11088.idx  sfIntersection.h.2C04B35B160BED65.idx  sfMathFunctions.h.BFDE7864442B4998.idx  sfMatrix.h.9E481CD7ADE48EDB.idx  sfPipelineManager.cpp.10A5CAA386E6D927.idx  sfQuaterion.cpp.954A1BBE4C0CCD35.idx  sfQuaterion.h.4EFE53D32D7A7977.idx  sfRenderSubpassManager.cpp.0360A914E2C824A6.idx  sfVector.cpp.4C212CA5E52F4DC4.idx  sfVector.h.58A7AC89B20999DB.idx  stb_image.h.102F1337A04A57E0.idx  stb_implementation.cpp.D415039DDDC914BC.idx
SpectraFrame/: CMakeLists.txt  SpectraFrame.vcxproj  SpectraFrame.vcxproj.filters  \  cube.ply  g_buffer.frag  g_buffer.vert  g_buffer_frag.spv  g_buffer_vert.spv  indert  light.frag  light.vert  main.cpp  q  testScene.cpp
SpectraFrame/Core/: CMakeLists.txt  sfCommon.cpp  sfCommon.h  sfHash.cpp  sfHash.h  sfLogger.h  sfPLYLoader.cpp  sfPLYLoader.h  sfSwapchain.cpp  sfSwapchain.h  sfVkCommon.cpp  sfVkCommon.h  sfVkCore.cpp  sfVkCore.h  sfWindow.cpp  sfWindow.h
SpectraFrame/Framegraph/: CMakeLists.txt  sfDescriptorManager.cpp  sfDescriptorManager.h  sfFramegraph.cpp  sfFramegraph.h  sfFramegraphImageManager.cpp  sfFramegraphImageManager.h  sfPipelineManager.h  sfRenderPassManager.cpp  sfRenderPassManager.h  sfRenderSubpassManager.h  sfResourceManager.cpp  sfResourceManager.h
SpectraFrame/Framepass/: sfFramepass.cpp  sfFramepass.h  sfFramepassResource.cpp  sfFramepassResource.h
SpectraFrame/Math/: CMakeLists.txt  sfIntersection.cpp  sfIntersection.h  sfMathFunctions.cpp  sfMathFunctions.h  sfMatrix.cpp  sfMatrix.h  sfQuaterion.cpp  sfQuaterion.h  sfVector.cpp  sfVector.h
SpectraFrame/Rendering/: CMakeLists.txt  sfRenderPass.cpp  sfRenderPass.h  sfRenderPassImages.cpp  sfRenderPassImages.h
SpectraFrame/Scene/: CMakeLists.txt  sfRenderMesh.h  sfScene.cpp  sfScene.h
SpectraFrame/src/: main.cpp  testScene.cpp
SpectraFrame/src/Core/: sfCommon.cpp  sfCommon.h  sfHash.cpp  sfHash.h  sfLogger.h  sfPLYLoader.cpp  sfPLYLoader.h  sfVkCommon.cpp  sfVkCommon.h  sfWindow.cpp  sfWindow.h  vulkanWrap.cpp  vulkanWrap.h
SpectraFrame/src/Framegraph/: sfDescriptorManager.cpp  sfDescriptorManager.h  sfFramegraph.cpp  sfFramegraph.h  sfFramegraphImageManager.cpp  sfFramegraphImageManager.h  sfPipelineManager.h  sfRenderPassManager.cpp  sfRenderPassManager.h  sfRenderSubpassManager.h  sfResourceManager.cpp  sfResourceManager.h
SpectraFrame/src/Math/: sfIntersection.cpp  sfIntersection.h  sfMathFunctions.cpp  sfMathFunctions.h  sfMatrix.cpp  sfMatrix.h  sfQuaterion.cpp  sfQuaterion.h  sfVector.cpp  sfVector.h
SpectraFrame/src/Renderer/: sfRenderer.h
SpectraFrame/src/Scene/: sfRenderMesh.h  sfScene.cpp  sfScene.h
